fixed shaded box alignment

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,9 +14,6 @@ img.center {
 	margin-right: auto;
 }
 
-div {
-	padding: 10px 10px 10px 10px;
-}
 
 div.center{
 	text-align: center;
